@@ -1,22 +1,57 @@
 package com.adelacebal;
 
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.*;
 
 public class Main {
 
     public static void main(String[] args) {
         try {
-            URI baseUri = new URI("http://username:password@myserver.com:5000");
-            URI uri = new URI("/catalogue/phones?os=android#samsung");
-            URI resolvedUri = baseUri.resolve(uri);
+            URL url = new URL("http://example.org");
+
+            URLConnection urlConnection = url.openConnection();
+            urlConnection.connect();
+
+//            BufferedReader inputStream = new BufferedReader(
+//                    new InputStreamReader(url.openStream()));
+//            String line = "";
+//            while(line != null) {
+//                line = inputStream.readLine();
+//                System.out.println(line);
+//            }
+
+        } catch (MalformedURLException e) {
+            System.out.println("Malformed URL: " + e.getMessage());
+        } catch (IOException e) {
+            System.out.println("IOException: " + e.getMessage());
+        }
+    }
+}
+//            URI uri = url.toURI();
+//            URI baseUri = new URI("http://username:password@mynewserver.com:5000");
+//            URI uri1 = new URI("/catalogue/phones?os=android#samsung");
+//            URI uri2 = new URI("/catalogue/tvs?manufacturer=samsung");
+//            URI uri3 = new URI("/store/locations?zip=12345");
+//
+//            URI resolvedUri1 = baseUri.resolve(uri1);
+//            URI resolvedUri2 = baseUri.resolve(uri2);
+//            URI resolvedUri3 = baseUri.resolve(uri3);
+//
+//            URL url1 = resolvedUri1.toURL();
+//            System.out.println("URL 1 = " + url1);
+//
+//            URL url2 = resolvedUri2.toURL();
+//            System.out.println("URL 2 = " + url2);
+//
+//            URL url3 = resolvedUri3.toURL();
+//            System.out.println("URL 3 = " + url3);
+//
+//            URI relativizedURI = baseUri.relativize(resolvedUri2);
+//            System.out.println("Relative URI = " +relativizedURI);
 
 //            URI uri = new URI("http://username:password@myserver.com:5000/catalogue/phones?os=android#samsung");
-            URL url = resolvedUri.toURL();
-            System.out.println("URL = " + url);
-
 //            URI uri = new URI("hello");
 
 
@@ -29,11 +64,8 @@ public class Main {
 //            System.out.println("Path = " + uri.getPath());
 //            System.out.println("Query = " + uri.getQuery());
 //            System.out.println("Fragment = " + uri.getFragment());
-
-        } catch(URISyntaxException e) {
-            System.out.println("URI bad syntax: " + e.getMessage());
-        } catch(MalformedURLException e) {
-            System.out.println("URL malformed: " + e.getMessage());
-        }
-    }
-}
+//
+//        } catch(URISyntaxException e) {
+//            System.out.println("URI bad syntax: " + e.getMessage());
+//        } catch(MalformedURLException e) {
+//            System.out.println("URL malformed: " + e.getMessage());
